argo-resources/plain/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        checksum: ae123
    spec:
      volumes:
        - name: html
          configMap:
            name: nginx
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "index.html"
              path: "index.html"
      containers:
        - name: nginx
          image: bitnami/nginx:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: html
              mountPath: "/app"
              readOnly: true
