argo-resources/plain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.argo.mklug.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  name: http
#  tls:
#    - hosts:
#        - nginx.argo.mklug.at
#      secretName: tls-nginx
