argo-resources/plain/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
